[package]
name = "rusty-env"
version = "0.1.0"
edition = "2021"
authors = ["Lance Warden"]
description = "List environment variables available to rust programs, for lazy rustaceans."
keywords = ["environment", "env", "dev-tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.0.*", features = ["derive"] }
